<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.setting.RegisterActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="410dp"
        android:layout_height="325dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="182dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:background="#CD25F448"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="23dp" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:drawableBottom="@android:drawable/button_onoff_indicator_on"
            android:ems="10"
            android:hint="@string/input1"
            android:inputType="textEmailAddress" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="17dp" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:autofillHints=""
            android:drawableBottom="@android:drawable/button_onoff_indicator_on"
            android:ems="10"
            android:hint="@string/t1"
            android:inputType="textPassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="19dp" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:drawableBottom="@android:drawable/button_onoff_indicator_on"
            android:ems="10"
            android:hint="@string/input2"
            android:inputType="numberPassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="19dp" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:drawableBottom="@android:drawable/button_onoff_indicator_on"
            android:ems="10"
            android:hint="@string/input3"
            android:inputType="numberPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="138dp"
        android:layout_height="71dp"
        android:layout_marginStart="174dp"
        android:layout_marginLeft="174dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="176dp"
        android:layout_marginRight="176dp"
        android:drawableBottom="@android:drawable/button_onoff_indicator_off"
        android:text="@string/confirm"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/b6" />

</androidx.constraintlayout.widget.ConstraintLayout>